# AIChatBot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Resource/: Resource.qrc
include/: global.h  mainwindow.h  sideBar.h  socket_client.h
include/ChatPage/: ChatMessageList.h  ChatPage.h  ChatWindow.h  DefaultWindow.h  FileQueueList.h  FriendChatList.h
include/Component/: ImageViewer.h  RoundImage.h  smoothlistwidget.h
include/StyledItemDelegate/: FileQueueItemWidget.h  FriendChatDelegate.h  MessageDelegate.h  MessageItemWidget.h
src/: global.cpp  mainwindow.cpp  sideBar.cpp  socket_client.cpp
src/ChatPage/: ChatMessageList.cpp  ChatPage.cpp  ChatWindow.cpp  DefaultWindow.cpp  FileQueueList.cpp  FriendChatList.cpp
src/Component/: ImageViewer.cpp  RoundImage.cpp  smoothlistwidget.cpp
src/StyledItemDelegate/: FileQueueItemWidget.cpp  FriendChatDelegate.cpp  MessageDelegate.cpp  MessageItemWidget.cpp
test/: main_ui.py  run.sh  text.py
